# S-NDB-UND-vs-code

./: .gitignore  README.md  example_manifest.json  extension.ts  package-lock.json  package.json  pyproject.toml  requirements.txt  requirements.vscode.txt  sndbund_entry.py  tsconfig.json
.github/: copilot-instructions.md
.github/workflows/: build-exe.yml  build-windows-installer.yml  ci-extension.yml  release-vsix.yml  release-windows-app.yml
configs/: creature_families.example.json  fx_chain_v2.example.json  model_versions.example.json  sfx_presets_v1.example.json  sfx_presets_v2.example.json
docs/: audio_fx_plugins.md  audio_generation_landscape.md  creature_family_training_windows.md  creature_preset_polish_matrix.md  editor_v1_ui_layout.md  fx_chains_v2.md  plugins.md  pro_mode_spec.md  project_system.md  roadmap.md  sfx_presets_v2_schema.md  v2_spec.md  v3_spec.md
electron/: README.md  main.js  package.json
electron/editor/: editor.js  index.html  preload.js
electron/scripts/: prepare-assets.js  prepare-backend.js
native/pluginhost/: CMakeLists.txt  README.md
native/pluginhost/src/: main.cpp
scripts/: build_exe.ps1  build_soundpack_v1.py  build_windows_app.ps1  get_rfxgen.ps1  make_granular_showcase.ps1
soundpack_v1/: README.md  credits_schema.md  manifest.json
soundpack_v1/resourcepack/: pack.mcmeta
soundpack_v1/wav/: explosion_big_boom.wav.credits.json  explosion_small_boom.wav.credits.json  impact_punch_light.wav.credits.json  weapon_laser_zap.wav.credits.json  whoosh_fast_swing.wav.credits.json
src/soundgen.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
vscode-extension/: CHANGELOG.md  README.md  extension.ts  package-lock.json  package.json
(+64 files in other folders)
