[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "soundgen"
version = "0.1.0"
description = "Prompt to sound effect WAV generator"
requires-python = ">=3.10"

[project.scripts]
soundgen-generate = "soundgen.generate:main"
soundgen-web = "soundgen.web:main"
soundgen-batch = "soundgen.batch:main"
soundgen-from-docs = "soundgen.from_docs:main"
soundgen-finetune = "soundgen.finetune:main"
soundgen-regions = "soundgen.editor_regions:main"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
